[package]
name = "ecs-150loc"
version = "0.1.0"
edition = "2021"
name = "zyx-core"
version = "0.1.0"
edition = "2021"
authors = ["zk4x"]
description = "ECS in 150 loc"
readme = "README.md"
homepage = "https://github.com/zk4x/ecs-150loc"
repository = "https://github.com/zk4x/ecs-150loc"
license = "Apache-2.0"
keywords = []
categories = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
